# BlackTape

./: .gitignore  ARCHITECTURE.md  BUILD-LOG.md  CLAUDE.md  HANDOFF.md  LICENSE  PROJECT.md  README.md  ROADMAP.md  UX-AUDIT.md  package-lock.json  package.json  recording.config.json  svelte.config.js  vite.config.ts  wrangler.jsonc
.claude/: HANDOFF.md  settings.local.json
.githooks/: post-commit  pre-commit
.planning/: .continue-here.md  BACKLOG.md  MILESTONES.md  PARACHORD-ANALYSIS.md  PROCESS.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  lessons.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.5-PLAN.md  v1.6-MILESTONE-AUDIT.md
docs/: design-system.html  discovery-redesign-research.md  release-process.md  user-manual.md
mockups/: 01-artist.html  02-discover.html  03-library.html  04-genre.html  styles.css
pipeline/: add-slugs.js  build-discogs-tags-pg.mjs  build-finalize-pg.mjs  build-genre-data-pg.mjs  build-genre-data.mjs  build-geocoding-pg.mjs  build-geocoding.mjs  build-similar-artists-pg.mjs  download.js  (+14 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.dev.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: activitypub.rs  enrichment.rs  export.rs  lib.rs  main.rs  mercury_db.rs  secrets.rs  site_gen.rs  updater.rs
src-tauri/src/ai/: download.rs  embeddings.rs  mod.rs  sidecar.rs  taste_db.rs  track_cache.rs
src-tauri/src/scanner/: metadata.rs  mod.rs
(+812 files in other folders)
