[package]
name = "mercury"
version = "0.1.0"
edition = "2021"

[lib]
name = "mercury_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
custom-protocol = ["tauri/custom-protocol"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.23"
walkdir = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
tauri-plugin-shell = "2"
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"
sqlite-vec = "0.1"
zerocopy = { version = "0.8", features = ["derive"] }
base64 = "0.22"
rsa = { version = "0.9", features = ["pem"] }
rand = "0.8"
tauri-plugin-oauth = "2"
